finally slove the error

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-  <form action="/addproduct" method="post">
-    <input type="text" name="pdname" id="pdname"><br>
-    <input type="number" name="pdprice" id="pdprice"><br>
-    <input type="text" name="quantity" id="quantity"><br>
-    <input type="button" value="submit" id="submitbtn">
+  <form action="/addproduct"  method="post">
+    <input type="text" name="pdname" id="pdname" placeholder="name"><br>
+    <input type="text" name="pdprice" id="pdprice" placeholder="price"><br>
+    <input type="text" name="quantity" id="quantity" placeholder="quantity"><br>
+    <button type="submit">Add</button>
   </form>
 </body>
 </html>
